--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -184,7 +184,7 @@
 					<span id="fdCssOSW" style="font-family: Segoe UI, ABR;">Windows</span></span></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">based on <b>[css] os</b> above</span></div>
-			&nbsp [font] os <sup>1</sup></td><td id="fontOS"></td></tr>
+			&nbsp [font] os <sup>1</sup></td><td class="c" id="fontOS"></td></tr>
 		<tr><td>[css line-height] os</td><td class="c" id="cssLH"></td></tr>
 		<tr><td>[scrollbar width] os <sup>2, 3</sup></td><td class="c" id="scrollbarWidth"></td></tr>
 		<tr><td>[tcp/ip] os</td><td></td></tr>
@@ -533,18 +533,23 @@
 				<div class="nav-down"><a href="#fonts">&#9660;</a></div></div>
 		</th></tr></thead>
 		<tr><td><div>
-				<div class="btn-left"><button class="btn10" onClick="outputSection(`10`, `c`, `m`)">[ re-run tests ]</button></div>
+				<div class="btn-left"><button class="btn10" onClick="outputSection(`10`, `c1`, `m`)">[ re-run tests ]</button></div>
 				<div><div class="ttip"><span class="icon">[ i ]</span>
 					<span class="ttxt">dom.webaudio.enabled</span></div> &nbsp [api] web audio</div></div></td>
-			<td class="c mono" id="audioSupport"></td>
+			<td class="c1 mono" id="audioSupport"></td>
 		</tr>
-		<tr><td>getChannelData <sup>1</sup></td><td class="c mono" id="audioGet"></td></tr>
-		<tr><td>copyFromChannel <sup>1</sup></td><td class="c mono" id="audioCopy"></td></tr>
-		<tr><td>sum <sup>1</sup></td><td class="c mono" id="audioSum"></td></tr>
-		<tr><td>ac-baseLatency | ac-outputLatency <sup>2</sup></td><td class="c mono" id="audioLatency"></td></tr>
-		<tr><td>[properties] audioContext <sup>2</sup></td><td class="c mono" id="audio1hash"></td></tr>
-		<tr><td>OscillatorNode <sup>2</sup></td><td class="c mono" id="audio2hash"></td></tr>
-		<tr><td>OscillatorNode/DynamicsCompressor <sup>2</sup></td><td class="c mono" id="audio3hash"></td></tr>
+		<tr><td>getChannelData <sup>1</sup></td><td class="c1 mono" id="audioGet"></td></tr>
+		<tr><td>copyFromChannel <sup>1</sup></td><td class="c1 mono" id="audioCopy"></td></tr>
+		<tr><td>sum <sup>1</sup></td><td class="c1 mono" id="audioSum"></td></tr>
+		<tr><td colspan="2" class="center">------</td></tr>
+		<tr><td>
+				<div class="btn-left"><button class="btn10" onClick="outputSection(`10`, `c2`, `m`)">[ run tests ]</button></div>
+				<div>outputLatency <sup>2</sup></div></td>
+			<td class="c2 mono" id="audioLatency"></td>
+		</tr>
+		<tr><td>audioContext <sup>2</sup></td><td class="c2 mono" id="audio1hash"></td></tr>
+		<tr><td>OscillatorNode <sup>2</sup></td><td class="c2 mono" id="audio2hash"></td></tr>
+		<tr><td>OscillatorNode/DynamicsCompressor <sup>2</sup></td><td class="c2 mono" id="audio3hash"></td></tr>
 		<tr><td colspan="2" class="showhide">
 				<input id="collapseA" class="toggle" type="checkbox" checked onchange="toggleitems(this, `A`)">
 				<label for="collapseA" class="lbl-toggle" id="labelA">&#9660; show details</label>
@@ -770,13 +775,12 @@
 	<script src="js/devices.js"></script>
 	<script src="js/css.js"></script>
 	<script src="js/misc.js"></script>
-	<script src="js/webgl.js"></script>
 	<script src="js/cookies.js"></script>
 	<!-- slower sections -->
 	<script src="js/audio.js"></script>
+	<script src="js/webgl.js"></script>
 	<script src="js/fonts.js"></script>
 	<script src="js/canvas.js"></script>
-
 
 	<!-- almost 500kb, load last -->
 	<link rel="stylesheet" type="text/css" href="css/window_size.css">
