--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -12,6 +12,11 @@
 <body>
 
 	<!-- non-displayed elements -->
+		<!-- WOFF2 -->
+		<div class="offscreen">
+			<div><span id="woffno" class="woffno">&#xe800;</span></div>
+			<div><span id="woffyes" class="woffyes">&#xe800;</span></div>
+		</div>
 		<!-- screen, ua, os, etc -->
 		<div id='DIV_DPI' class="offscreen" style='height: 1in; width: 1in;'></div>
 		<div id="DIV_LINEHEIGHT" class="offscreen">
@@ -46,11 +51,6 @@
 				<div><span id="df2" style='font-family: sans-serif;'><span></div>
 				<div><span id="df3" style='font-family: monospace;'><span></div>
 			</div>
-		</div>
-		<!-- woff2 -->
-		<div class="offscreen">
-			<div><span id="woff_fnt0" class="woff_fnt0" style='font-size: 128px;'>&#xe800;</span></div>
-			<div><span id="woff_fnt1" class="woff_fnt1" style='font-size: 128px;'>&#xe800;</span></div>
 		</div>
 		<!-- unicode glyphs -->
 		<div class="offscreen">
