--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -620,19 +620,19 @@
 				<label for="collapseF" class="lbl-toggle" id="labelF">&#9660; show details</label>
 		</td></tr>
 		<!--WHITELIST: c2-->
-		<tr class="togF"><td colspan="2" class="sub11">fingerprintjs2 [whitelist]</td><td>
+		<tr class="togF"><td colspan="2" class="sub11" id="small_fontlabel">whitelist</td><td>
 			 <button class="btn0" onClick="copyclip(`small_fontFPJS2Found`)">[ copy to clipboard ]</button></td></tr>
 		<tr class="togF"><td></td><td colspan="2" class="intro" id="small_fontFPJS2Found"></td></tr>
-		<tr class="togF"><td colspan="2" class="sub11">font fallback [whitelist]</td><td>
+		<tr id="fontB1" class="togF1"><td colspan="2" class="sub11">font fallback [whitelist]</td><td>
 			 <button class="btn0" onClick="copyclip(`small_fontFBFound`)">[ copy to clipboard ]</button></td></tr>
-		<tr class="togF"><td></td><td colspan="2" class="intro" id="small_fontFBFound"></td></tr>
+		<tr id="fontB2" class="togF1"><td></td><td colspan="2" class="intro" id="small_fontFBFound"></td></tr>
 		<!--OS: c3-->
-		<tr class="togF"><td colspan="2" class="sub11">fingerprintjs2 [os]</td><td>
+		<tr class="togF"><td colspan="2" class="sub11" id="all_fontlabel">os</td><td>
 			 <button class="btn0" onClick="copyclip(`all_fontFPJS2Found`)">[ copy to clipboard ]</button></td></tr>
 		<tr class="togF"><td></td><td colspan="2" class="intro" id="all_fontFPJS2Found"></td></tr>
-		<tr class="togF"><td colspan="2" class="sub11">enumerate fonts [os]</td><td>
+		<tr id="fontD1" class="togF1"><td colspan="2" class="sub11">font fallback [os]</td><td>
 			 <button class="btn0" onClick="copyclip(`all_fontFBFound`)">[ copy to clipboard ]</button></td></tr>
-		<tr class="togF"><td></td><td colspan="2" class="intro" id="all_fontFBFound"></td></tr>
+		<tr id="fontD2" class="togF1"><td></td><td colspan="2" class="intro" id="all_fontFBFound"></td></tr>
 		<!--GLYPHS -->
 		<tr class="togF"><td colspan="2" class="sub11">[offset] unicode glyphs</td><td>
 			 <button class="btn0" onClick="copyclip(`fontUGFound1`)">[ copy to clipboard ]</button></td></tr>
