--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 	<title>TorZillaPrint</title>
@@ -10,7 +9,6 @@
 </head>
 
 <body>
-
 	<!-- non-displayed elements -->
 		<!-- WOFF2 -->
 		<div class="offscreen">
@@ -37,7 +35,7 @@
 			<textarea id="widget9"></textarea><br>
 		</div>
 		<!-- app language -->
-		<div class="offscreen"><img id="APP_LANG_IMAGE" src=""></div>
+		<div class="offscreen"><img id="APP_LANG_IMAGE" src=""></img></div>
 		<div class="hidden"><form><input id="APP_LANG_1" required="" type="text"></form></div>
 		<iframe id="APP_LANG_2" class="hidden"></iframe>
 		<iframe id="APP_LANG_3" class="hidden"></iframe>
@@ -64,7 +62,6 @@
 		<div class="hidden"><span id="sColorElement"></span></div>
 		<div class="themed" id="pColorElement"></div>
 		<div class="motion" id="pMotionElement"></div>
-
 
 	<table>
 	<tr><td><a anchor="top"></a><h2>TorZillaPrint</h2></td></tr>
@@ -178,10 +175,10 @@
 		<tr><td>[chrome://] os</td><td class="c" id="fdChromeOS"></td></tr>
 		<tr><td>[math] os</td><td class="c" id="fdMathOS"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
-			<span class="ttxtb">Linux, Mac or Windows</div> &nbsp [css] os <sup>1</sup></td>
-			<td><span id="fdCssOS"><span id="fdCssOSL" style="font-family: Arimo, DejaVu Serif, ABR;">Linux</span>
+			<span class="ttxtb">Linux, Mac or Windows</span></div> &nbsp [css] os <sup>1</sup></td>
+			<td><span id="fdCssOSL" style="font-family: Arimo, DejaVu Serif, ABR;">Linux</span>
 					<span id="fdCssOSM" style="font-family: Lucida Grande, ABR;">Mac</span>
-					<span id="fdCssOSW" style="font-family: Segoe UI, ABR;">Windows</span></span></td></tr>
+					<span id="fdCssOSW" style="font-family: Segoe UI, ABR;">Windows</span></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">based on <b>[css] os</b> above</span></div>
 			&nbsp [font] os <sup>1</sup></td><td class="c" id="fontOS"></td></tr>
@@ -276,13 +273,13 @@
 		<tr><td>[navigator] languages[0]</td><td class="c" id="nLanguages0"></td></tr>
 		<tr><td>[Intl.PluralRules] locale</td><td class="c" id="localeIPR"></td></tr>
 		<tr><td>[resolvedOptions] locale</td><td class="c" id="localeRO"></td></tr>
-		<tr><td colspan="2" class="center">------</td>
+		<tr><td colspan="2" class="center">------</td></tr>
 		<tr><td>[dtd] app language <sup>1</sup></td><td class="c" id="appLang2"></td></tr>
 		<tr><td>[dtd nullprinciple] app language <sup>2</sup></td><td class="c" id="appLang3"></td></tr>
 		<tr><td>[dom.properties] app language <sup>3</sup></td><td class="c" id="appLang1"></td></tr>
 		<tr><td>[MediaDocument.properties] app language <sup>3</sup></td><td class="c" id="appLang4"></td></tr>
 		<tr><td>[xmlparser.properties] app language <sup>3</sup></td><td class="c" id="appLang5"></td></tr>
-		<tr><td colspan="2" class="center">------</td>
+		<tr><td colspan="2" class="center">------</td></tr>
 		<tr><td>timezone offsets</td><td class="c" id="tzOffsets"></td></tr>
 		<tr><td>[resolvedOptions] timezone</td><td class="c" id="tzRO"></td></tr>
 		<tr><td>system date/time</td><td class="c" id="dateSystem"></td></tr>
@@ -480,7 +477,7 @@
 		<tr class="togD"><td></td><td colspan="7" class="sub9" id="drFirstHeader">Element.getClientRects<br>[note: the other three methods have the same hash and values]</td></tr>
 			<!-- ^^ Element.getClientRects -->
 			<tr class="togD"><td>x</td><td id="dr11"></td><td colspan="2" id="dr12"></td><td id="dr13"></td><td id="dr14"></td><td id="dr15"></td><td id="dr16"></td></tr>
-			<tr class="togD"><td>y</td><td id="dr17"></td><td colspan="2" id="dr18"></td><td id="dr19"></td><td id="dr110"></td><td id="dr111"></td><td id="dr112"></tr>
+			<tr class="togD"><td>y</td><td id="dr17"></td><td colspan="2" id="dr18"></td><td id="dr19"></td><td id="dr110"></td><td id="dr111"></td><td id="dr112"></td></tr>
 			<tr class="togD"><td>width</td><td id="dr113"></td><td colspan="2" id="dr114"></td><td id="dr115"></td><td id="dr116"></td><td id="dr117"></td><td id="dr118"></td></tr>
 			<tr class="togD"><td>height</td><td id="dr119"></td><td colspan="2" id="dr120"></td><td id="dr121"></td><td id="dr122"></td><td id="dr123"></td><td id="dr124"></td></tr>
 			<tr class="togD"><td>top</td><td id="dr125"></td><td colspan="2" id="dr126"></td><td id="dr127"></td><td id="dr128"></td><td id="dr129"></td><td id="dr130"></td></tr>
@@ -688,7 +685,7 @@
 		</th></tr></thead>
 		<tr><td><div>
 				<div class="btn-left"><button class="btn13" onClick="outputSection(`14`, `c`, `m`)">[ re-run tests ]</button>
-				</div>prefers-color-scheme</td><td class="c" id="pColorScheme"></td></tr>
+			</div>prefers-color-scheme</div></td><td class="c" id="pColorScheme"></td></tr>
 		<tr><td>prefers-reduced-motion</td><td class="c" id="pReducedMotion"></td></tr>
 		<tr><td>system colors</td><td class="c mono" id="sColorHash"></td></tr>
 	</table>
