--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -69,7 +69,7 @@
 	<table>
 	<tr><td><a anchor="top"></a><h2>TorZillaPrint</h2></td></tr>
 	<tr><td class="blurb">TZP is only designed for Firefox [v60+] and the Tor Browser [v8+].
-	<a class="blue" href="extra.html">Here</a> are additonal tests, and <a target="_blank" class="blue"
+	<a target="_blank" class="blue" href="extra.html">Here</a> are additonal tests, and <a target="_blank" class="blue"
 	href="https://github.com/ghacksuserjs/TorZillaPrint">here</a> is the repo [feel free to drop in]. When re-testing
 	sections, be aware that some pref/option changes may require a page refresh [<b>F5</b>] or even a new browser session.
 	</td></tr>
