--- a/extra.html
+++ b/extra.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<title>TorZillaPrint: Additional Tests</title>
+	<title>TorZillaPrint: Extra Tests</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<script src="js/generic.js"></script>
 	<script src="js/globals.js"></script>
@@ -16,7 +15,7 @@
 	<div class="offscreen"><span id="fontFBTest" style='white-space: nowrap; font-family: fontFallback;'></span></div>
 
 	<table>
-		<tr><td><a anchor="top"><h2>TorZillaPrint: Additional Tests</h2></td></tr>
+		<tr><td><a anchor="top"><h2>TorZillaPrint: Extra Tests</h2></td></tr>
 		<tr><td class="blurb"><a class="blue" href="TorZillaPrint.html">return to the main test</a></td></tr>
 	</table>
 
@@ -85,12 +84,12 @@
 				<label for="collapseF" class="lbl-toggle" id="labelF">&#9660; show details</label>
 		</td></tr>
 		<!--WHITELIST: c2-->
-		<tr class="togF"><td colspan="2" class="sub10">fingerprintjs2 [monsta]</td>
+		<tr class="togF"><td colspan="2" class="sub10" id="monsta_fontlabel">monsta</td>
 			<td><button class="btn0" onClick="copyclip(`small_fontFPJS2Found`)">[ copy to clipboard ]</button></td></tr>
 		<tr class="togF"><td></td><td colspan="2" class="intro" id="monsta_fontFPJS2Found"></td></tr>
-		<tr class="togF"><td colspan="2" class="sub10">font fallback [monsta]</td>
+		<tr id="fontF1" class="togF1"><td colspan="2" class="sub10">font fallback [monsta]</td>
 			<td><button class="btn0" onClick="copyclip(`small_fontFBFound`)">[ copy to clipboard ]</button></td></tr>
-		<tr class="togF"><td></td><td colspan="2" class="intro" id="monsta_fontFBFound"></td></tr>
+		<tr id="fontF2" class="togF1"><td></td><td colspan="2" class="intro" id="monsta_fontFBFound"></td></tr>
 		<!--CREDITS-->
 		<tr><td colspan="3"><span class="no_color">code based on work by </span>
 			<a target="_blank" class="blue" href="https://github.com/Valve/fingerprintjs2">fingerprintjs2</a> <sup>1</sup>
