--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -354,8 +354,8 @@
 				<div class="nav-down"><a href="#devices">&#9660;</a></div></div>
 		</th></tr></thead>
 		<tr><td colspan="2" class="intro"><span class="no_color">The <code>[cookie]</code>, <code>[localStorage]</code>, 
-			<code>[sessionStorage]</code> and <code> [indexedDB]</code> tests, on each run, each use a new random name and
-			value, attempt to set them, and then to read the value back. Only when it successfully reads back the value
+			<code>[sessionStorage]</code> and <code> [indexedDB]</code> tests, on each run, individually attempt to set a
+			new random name and value, and then to read them back. Only when it successfully reads back a matching value
 			is it deemed to be available and working.</span></td></tr>
 		<tr><td><div>
 				<div class="btn-left"><button class="btn6" onClick="outputSection(`6`, `c`, `m`)">[ re-run tests ]</button></div>
