--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -127,6 +127,10 @@
 		<tr><td>devicePixelRatio</td><td class="c" id="DevPR"></td></tr>
 		<tr><td>[scrollY] devicePixelRatio <sup>4</sup></td><td class="c" id="devPRscrollY"></td></tr>
 		<tr><td>[clientRect] devicePixelRatio <sup>4</sup></td><td class="c" id="devPRclientRect"></td></tr>
+		<tr><td colspan="2" class="center">--- android ---</td></tr>
+		<tr><td></td><td><input type="text" id="kbt" placeholder="tap in here" onfocus="get_kbh()"></td></tr>
+		<tr><td>keyboard height</td><td class="c" id="kbh"></td></tr>
+		<tr><td>toolbar height</td><td class="c" id="tbh"></td></tr>
 		<tr><td colspan="2"><span class="no_color">code based on work by </span>
 			<a target="_blank" class="blue" href="https://arthuredelstein.github.io/tordemos/media-query-fingerprint.html">Arthur Edelstein</a> <sup>1</sup>
 			<span class="no_color">, </span>
