--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -110,6 +110,7 @@
 			<div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">will attempt to open a new<br>window as big as possible<br>and grab the dimensions</span></div>
 			&nbsp new window</td><td class="c" id="newWinLeak"></td></tr>
+		<tr><td>[android native resolution] window</td><td class="c" id="droidWin"></td></tr>
 		<tr><td>private window</td><td class="c" id="IsPBMode"></td></tr>
 		<tr><td>orientation</td><td class="c" id="ScrOrient"></td></tr>
 		<tr><td>[css] orientation</td><td id="cssOrient"></td></tr>
