--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -288,6 +288,7 @@
 		<tr><td>[MediaDocument.properties] app language <sup>3</sup></td><td class="c" id="appLang4"></td></tr>
 		<tr><td>[xmlparser.properties] app language <sup>3</sup></td><td class="c" id="appLang5"></td></tr>
 		<tr><td colspan="2" class="center">------</td></tr>
+		<tr><td>hash</td><td class="c mono" id="lngHash"></td></tr>
 		<tr><td>timezone offsets</td><td class="c" id="tzOffsets"></td></tr>
 		<tr><td>[resolvedOptions] timezone</td><td class="c" id="tzRO"></td></tr>
 		<tr><td>system date/time</td><td class="c" id="dateSystem"></td></tr>
@@ -310,6 +311,7 @@
 		<tr><td>Intl.RelativeTimeFormat</td><td class="c" id="dateIRTF"></td></tr>
 		<tr><td>[resolvedOptions] calendar</td><td class="c" id="calendarRO"></td></tr>
 		<tr><td>[resolvedOptions] numberingSystem</td><td class="c" id="numsysRO"></td></tr>
+		<tr><td colspan="2" class="center">------</td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxt">geo.enabled</span></div>
 			&nbsp [api] geolocation</td><td class="c" id="nGeolocation"></td></tr>
