--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -268,7 +268,7 @@
 	<table id="tb4">
 		<col width="37%"><a name="language"></a><col width="63%">
 		<thead><tr><th colspan="2">
-			<div class="nav-title"><a href="#language">Language & Locale / Time Zone & Date Format / Geolocation</a>
+			<div class="nav-title"><a href="#language">Language & Locale / Date/Time & Format / Geolocation</a>
 				<div class="nav-up"><a href="#math">&#9650;</a></div>
 				<div class="nav-down"><a href="#headers">&#9660;</a></div></div>
 		</th></tr></thead>
@@ -276,48 +276,60 @@
 				<div class="btn-left"><button class="btn4" onClick="outputSection(`4`, `c`, `m`)">[ re-run tests ]</button></div>
 				<div>[header] http_accept_language</div></div></td>
 			<td></td></tr>
-		<tr><td>[navigator] languages</td><td class="c" id="nLanguages"></td></tr>
-		<tr><td>[navigator] language</td><td class="c" id="nLanguage"></td></tr>
-		<tr><td>[navigator] languages[0]</td><td class="c" id="nLanguages0"></td></tr>
-		<tr><td>[Intl.PluralRules] locale</td><td class="c" id="localeIPR"></td></tr>
-		<tr><td>[resolvedOptions] locale</td><td class="c" id="localeRO"></td></tr>
+		<tr><td>language & locale</td><td class="c mono" id="lHash1"></td></tr>
+		<tr><td>date/time & format</td><td class="c mono" id="lHash2"></td></tr>
+		<tr><td>geolocation</td><td class="c mono" id="lHash3"></td></tr>
 		<tr><td colspan="2" class="center">------</td></tr>
 		<tr><td>[dtd] app language <sup>1</sup></td><td class="c" id="appLang2"></td></tr>
 		<tr><td>[dtd nullprinciple] app language <sup>2</sup></td><td class="c" id="appLang3"></td></tr>
 		<tr><td>[dom.properties] app language <sup>3</sup></td><td class="c" id="appLang1"></td></tr>
 		<tr><td>[MediaDocument.properties] app language <sup>3</sup></td><td class="c" id="appLang4"></td></tr>
 		<tr><td>[xmlparser.properties] app language <sup>3</sup></td><td class="c" id="appLang5"></td></tr>
-		<tr><td colspan="2" class="center">------</td></tr>
-		<tr><td>hash</td><td class="c mono" id="lngHash"></td></tr>
-		<tr><td>timezone offsets</td><td class="c" id="tzOffsets"></td></tr>
-		<tr><td>[resolvedOptions] timezone</td><td class="c" id="tzRO"></td></tr>
-		<tr><td>system date/time</td><td class="c" id="dateSystem"></td></tr>
-		<tr><td>toString</td><td class="c" id="dateString"></td></tr>
-		<tr><td>[long] toLocaleString</td><td class="c" id="lngdateLS"></td></tr>
-		<tr><td>[long] toLocaleDateString</td><td class="c" id="lngdateLDS"></td></tr>
-		<tr><td>[long] toLocaleTimeString</td><td class="c" id="lngdateLTS"></td></tr>
-		<tr><td>[long] Intl.DateTimeFormat</td><td class="c" id="lngdateIDTF"></td></tr>
-		<tr><td>[formatToParts] Intl.DateTimeFormat</td><td class="c" id="dateFTP"></td></tr>
-		<tr><td>toGMTString</td><td class="c" id="dateGMT"></td></tr>
-		<tr><td>toUTCString</td><td class="c" id="dateUTC"></td></tr>
-		<tr><td>toLocaleString</td><td class="c" id="dateLS"></td></tr>
-		<tr><td>[Typed Array] toLocaleString</td><td class="c" id="dateTAtoLS"></td></tr>
-		<tr><td>toLocaleDateString</td><td class="c" id="dateLDS"></td></tr>
-		<tr><td>Intl.DateTimeFormat</td><td class="c" id="dateIDTF"></td></tr>
-		<tr><td>toLocaleTimeString</td><td class="c" id="dateLTS"></td></tr>
-		<tr><td>toTimeString</td><td class="c" id="dateTS"></td></tr>
-		<tr><td>[formatToParts] Intl.NumberFormat</td><td class="c" id="numFTP"></td></tr>
-		<tr><td>[resolvedOptions] hourCycle</td><td class="c" id="hourRO"></td></tr>
-		<tr><td>Intl.RelativeTimeFormat</td><td class="c" id="dateIRTF"></td></tr>
-		<tr><td>[resolvedOptions] calendar</td><td class="c" id="calendarRO"></td></tr>
-		<tr><td>[resolvedOptions] numberingSystem</td><td class="c" id="numsysRO"></td></tr>
-		<tr><td colspan="2" class="center">------</td></tr>
-		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
-			<span class="ttxt">geo.enabled</span></div>
-			&nbsp [api] geolocation</td><td class="c" id="nGeolocation"></td></tr>
-		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
-			<span class="ttxtb">permissions.default.geo</span></div>
-			&nbsp [permission] geolocation</td><td class="c" id="pGeolocation"></td></tr>
+		<!--details-->
+		<tr><td colspan="8" class="showhide">
+				<input id="collapseL" class="toggle" type="checkbox" checked onchange="toggleitems(this, `L`)"/>
+				<label for="collapseL" class="lbl-toggle" id="labelL">&#9660; show details</label>
+		</td></tr>
+			<tr class="togL"><td></td><td class="sub4">language & locale</td></tr>
+			<tr class="togL"><td>[navigator] languages</td><td class="c" id="nLanguages"></td></tr>
+			<tr class="togL"><td>[navigator] language</td><td class="c" id="nLanguage"></td></tr>
+			<tr class="togL"><td>[navigator] languages[0]</td><td class="c" id="nLanguages0"></td></tr>
+			<tr class="togL"><td>[Intl.PluralRules] locale</td><td class="c" id="localeIPR"></td></tr>
+			<tr class="togL"><td>[resolvedOptions] locale</td><td class="c" id="localeRO"></td></tr>
+		<tr class="togL"><td></td><td class="sub4">date/time & format</td></tr>
+			<tr class="togL"><td>timezone offsets</td><td class="c" id="tzOffsets"></td></tr>
+			<tr class="togL"><td>[resolvedOptions] timezone</td><td class="c" id="tzRO"></td></tr>
+			<tr class="togL"><td>system date/time</td><td class="c" id="dateSystem"></td></tr>
+			<tr class="togL"><td>toString</td><td class="c" id="dateString"></td></tr>
+			<tr class="togL"><td>[long] toLocaleString</td><td class="c" id="lngdateLS"></td></tr>
+			<tr class="togL"><td>[long] toLocaleDateString</td><td class="c" id="lngdateLDS"></td></tr>
+			<tr class="togL"><td>[long] toLocaleTimeString</td><td class="c" id="lngdateLTS"></td></tr>
+			<tr class="togL"><td>[long] Intl.DateTimeFormat</td><td class="c" id="lngdateIDTF"></td></tr>
+			<tr class="togL"><td>[formatToParts] Intl.DateTimeFormat</td><td class="c" id="dateFTP"></td></tr>
+			<tr class="togL"><td>toGMTString</td><td class="c" id="dateGMT"></td></tr>
+			<tr class="togL"><td>toUTCString</td><td class="c" id="dateUTC"></td></tr>
+			<tr class="togL"><td>toLocaleString</td><td class="c" id="dateLS"></td></tr>
+			<tr class="togL"><td>[Typed Array] toLocaleString</td><td class="c" id="dateTAtoLS"></td></tr>
+			<tr class="togL"><td>toLocaleDateString</td><td class="c" id="dateLDS"></td></tr>
+			<tr class="togL"><td>Intl.DateTimeFormat</td><td class="c" id="dateIDTF"></td></tr>
+			<tr class="togL"><td>toLocaleTimeString</td><td class="c" id="dateLTS"></td></tr>
+			<tr class="togL"><td>toTimeString</td><td class="c" id="dateTS"></td></tr>
+			<tr class="togL"><td>[formatToParts] Intl.NumberFormat</td><td class="c" id="numFTP"></td></tr>
+			<tr class="togL"><td>[resolvedOptions] hourCycle</td><td class="c" id="hourRO"></td></tr>
+			<tr class="togL"><td>Intl.RelativeTimeFormat</td><td class="c" id="dateIRTF"></td></tr>
+			<tr class="togL"><td>[formatToParts] Intl.RelativeTimeFormat</td><td class="c" id="dateIRTFFTP"></td></tr>
+			<tr class="togL"><td>[BigInt] toLocaleString </td><td class="c" id="numTLS"></td></tr>
+			<tr class="togL"><td>[resolvedOptions] calendar</td><td class="c" id="calendarRO"></td></tr>
+			<tr class="togL"><td>[resolvedOptions] numberingSystem</td><td class="c" id="numsysRO"></td></tr>
+		<tr class="togL"><td></td><td class="sub4">geolocation</td></tr>
+			<tr class="togL"><td><div class="ttip"><span class="icon">[ i ]</span>
+				<span class="ttxt">geo.enabled</span></div>
+				&nbsp [api] geolocation</td><td class="c" id="nGeolocation"></td></tr>
+			<tr class="togL"><td><div class="ttip"><span class="icon">[ i ]</span>
+				<span class="ttxtb">permissions.default.geo</span></div>
+				&nbsp [permission] geolocation</td><td class="c" id="pGeolocation"></td></tr>
+		<tr class="togL"><td colspan="2"></td></tr>
+		<!--credits-->
 		<tr><td colspan="2"><span class="no_color">app language code based on work by Alex Catarineu </span>
 			<a target="_blank" class="blue" href="https://acatarineu.github.io/fp/locale.html">here</a> <sup>1</sup>
 			<span class="no_color"> and </span>
